# rust-webserver

./: .gitignore  Cargo.toml  README.md
migrations/2020-11-01-031740_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
static/: index.css  index.html  minitwitter.css  minitwitter.html  minitwitter.js  page1.html
