[package]
name = "minitwitter"
version = "0.1.0"
authors = ["kschan <kokseng_92@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-files = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
